{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 42,
  "lineage": "97668e0c-363d-d2fe-aa2b-3510d5897507",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "publicGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877061436404:internet-gateway/igw-0fc4aee4f2920a10a",
            "id": "igw-0fc4aee4f2920a10a",
            "owner_id": "877061436404",
            "tags": {
              "Name": "public Internet gateway"
            },
            "tags_all": {
              "Name": "public Internet gateway"
            },
            "vpc_id": "vpc-0b4bc1ba6b7768691"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877061436404:route-table/rtb-0a5fa958c94673e84",
            "id": "rtb-0a5fa958c94673e84",
            "owner_id": "877061436404",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4bc1ba6b7768691"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877061436404:route-table/rtb-068670c90c188cf15",
            "id": "rtb-068670c90c188cf15",
            "owner_id": "877061436404",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc4aee4f2920a10a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route"
            },
            "tags_all": {
              "Name": "public route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4bc1ba6b7768691"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.publicGW",
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c7bb9817c2e5296",
            "route_table_id": "rtb-068670c90c188cf15",
            "subnet_id": "subnet-06fb0564cf712b9eb"
          },
          "dependencies": [
            "aws_internet_gateway.publicGW",
            "aws_route_table.publicRT",
            "aws_subnet.publicsubnet1",
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a950d62b940710b",
            "route_table_id": "rtb-068670c90c188cf15",
            "subnet_id": "subnet-0ed850305457ea0cf"
          },
          "dependencies": [
            "aws_internet_gateway.publicGW",
            "aws_route_table.publicRT",
            "aws_subnet.publicsubnet2",
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877061436404:security-group/sg-03375f0d7da8bfbd3",
            "description": "Allow HTTP and HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03375f0d7da8bfbd3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "103.156.103.211/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e839d43579e5c588"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2SG",
            "name_prefix": "",
            "owner_id": "877061436404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security for ec2"
            },
            "tags_all": {
              "Name": "security for ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4bc1ba6b7768691"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lbsg",
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877061436404:security-group/sg-0e839d43579e5c588",
            "description": "Allow HTTP and HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e839d43579e5c588",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "loadbalancerSG",
            "name_prefix": "",
            "owner_id": "877061436404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security group loadbalancer"
            },
            "tags_all": {
              "Name": "security group loadbalancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4bc1ba6b7768691"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877061436404:subnet/subnet-0fb3063f4106b3b52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.192/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb3063f4106b3b52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "877061436404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pranesh-private-1"
            },
            "tags_all": {
              "Name": "pranesh-private-1"
            },
            "vpc_id": "vpc-0b4bc1ba6b7768691"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877061436404:subnet/subnet-07dca122fb2577cb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.224/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07dca122fb2577cb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "877061436404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pranesh-private-2"
            },
            "tags_all": {
              "Name": "pranesh-private-2"
            },
            "vpc_id": "vpc-0b4bc1ba6b7768691"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877061436404:subnet/subnet-06fb0564cf712b9eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fb0564cf712b9eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "877061436404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pranesh-public-1-aqbur"
            },
            "tags_all": {
              "Name": "pranesh-public-1-aqbur"
            },
            "vpc_id": "vpc-0b4bc1ba6b7768691"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877061436404:subnet/subnet-0ed850305457ea0cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed850305457ea0cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "877061436404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pranesh-public-2-aqbur"
            },
            "tags_all": {
              "Name": "pranesh-public-2-aqbur"
            },
            "vpc_id": "vpc-0b4bc1ba6b7768691"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877061436404:vpc/vpc-0b4bc1ba6b7768691",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-05418c47231775ad0",
            "default_route_table_id": "rtb-01de6e51e6893da62",
            "default_security_group_id": "sg-038d6cc22f74e0b75",
            "dhcp_options_id": "dopt-0b92e23b419c50644",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b4bc1ba6b7768691",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01de6e51e6893da62",
            "owner_id": "877061436404",
            "tags": {
              "Name": "pranesh-vpc-aqbur"
            },
            "tags_all": {
              "Name": "pranesh-vpc-aqbur"
            }
          },
          "dependencies": [
            "random_string.random"
          ]
        }
      ]
    }
  ]
}